# rustplg

./: .gitignore  rustplg.sublime-project
.github/workflows/: audit.yml  check.yml  fly.yml  rust.yml  test.yml
actix-web-plg/: Cargo.toml
actix-web-plg/src/: main.rs
docker/rust/: Dockerfile  readme.md
docs/: readme.md
guessing_game/: Cargo.toml
guessing_game/src/: enums.rs  generics.rs  main.rs  structs.rs  traits.rs
leetcode/: readme.md
leetcode/src/: lib.rs  main.rs  palindrome_number.rs  roman_to_int.rs  two_sum.rs
lineup/: readme.md  start_postgres.ps1
lineup/migrations/: 20230926085830_init_schema.sql
lineup/webapp/: index.html  package-lock.json  package.json  vite.config.js
lineup/webapp/src/: App.jsx  main.jsx
lineup/webserver/: .dockerignore  Cargo.toml  Dockerfile  config.toml
lineup/webserver/src/: helpers.rs  lib.rs  main.rs  routes.rs  sayhi_middleware.rs  startup.rs
lineup/webserver/src/routes/: health_check.rs  home.rs
lineup/webserver/tests/api/: health_check.rs  helpers.rs  main.rs
minigrep/src/: lib.rs  main.rs
rbe/: Cargo.toml  readme.md
rbe/chp01/: Cargo.toml
rbe/chp01/src/: lib.rs  main.rs  print.rs
rbe/chp02/: Cargo.toml
rbe/chp02/src/: main.rs
rbe/chp03/: Cargo.toml
rbe/chp03/src/: main.rs
scratty/: Cargo.toml  Dockerfile  config.toml  readme.md
scratty/migrations/: 20230923105000_create_init_schema.sql
scratty/src/: lib.rs  main.rs  recovery_code.rs  utils.rs
zero2prod/: .dockerignore  Cargo.toml  Dockerfile  build_image.ps1  fly.toml  readme.md  start_postgres.ps1
zero2prod/config/: base.yaml  development.yaml
zero2prod/migrations/: 20230909104200_create_subscriptions_table.sql  20230916130908_make_status_not_null_in_subscriptions.sql  20230916133453_create_subscriptions_token_table.sql  20230919124029_rename_password_column.sql
zero2prod/src/: configuration.rs  email_client.rs  helpers.rs  lib.rs  main.rs  routes.rs  startup.rs  telemetry.rs
zero2prod/src/domain/: subscriber_email.rs  subscriber_name.rs
zero2prod/src/routes/: home.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
