[package]
name = "scratty"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4"
clap = "4"
config = "0.11"
secrecy = "0.8"
tokio = { version = "1", features = ["full"] }

[dependencies.uuid]
version = "1.4.0"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "sqlite",
    "uuid",
    "chrono",
    "migrate"
]


[dev-dependencies]
# property testing
fake = "~2.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"
tokio = { version = "1", features = ["rt", "macros"] }
